[tool.poetry]
name = "flipper-platformer-game"
version = "0.1.0"
description = ""
authors = ["Alex Devillier <alex.devillier@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
ufbt = "^0.2.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
